# TrackManager

./: .env.example  .gitignore  README.md  alembic.ini  build.bat  conftest.py  migrate_user_isolation.py  nixpacks.toml  requirements.txt  server.spec  server_entry.py
.claude/: settings.local.json
agent/: agent.py  build.bat  make_icon.py
agent/download/: audio_verify.py  bandcamp_check.py  deezer_dl.py  discogs_check.py  muzpa.py  orchestrator.py
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_trackstatus_enum.py  002_add_logging_tables.py  003_download_jobs.py  004_extend_trackstatus.py  005_user_is_active.py  006_spotify_per_user_credentials.py  007_spotify_sp_dc.py
app/: auth_middleware.py  config.py  db.py  main.py
app/api/: auth.py  auto_download.py  debug.py  download_jobs.py  review.py  settings_page.py  sync.py  tracks.py
app/collectors/: __init__.py  base.py  soundcloud.py  spotify.py  youtube.py
app/models/: __init__.py  app_event.py  download_job.py  normalized_track.py  review_item.py  source_track.py  track_history.py  user.py  user_report.py  user_settings.py
app/services/: auth.py  auto_download.py  bandcamp_check.py  deduplication.py  deezer_dl.py  discogs_check.py  ingestion.py  log_cleanup.py  log_service.py  muzpa.py  normalization.py  (+2 more)
scripts/: backfill_publisher_artist.py  backfill_youtube_durations.py  renormalize.py  renormalize_sources.py
tauri-app/: package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
tests/: test_all.py  test_spotify_sp_dc.py
(+16 files in other folders)
